Overdue Codelabs commit

--- a/SideProjects/todolist/src/app/app.component.html
+++ b/SideProjects/todolist/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-item></app-item>
+      <app-navbar></app-navbar>
     </div>
   </div>
 </div>
