--- a/SideProjects/todolist/src/app/auth/auth.component.html
+++ b/SideProjects/todolist/src/app/auth/auth.component.html
@@ -1,1 +1,72 @@
-<p>auth works!</p>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@1,187&family=Jura&display=swap"
+  rel="stylesheet"
+/>
+
+<div style="width: 10px; margin: 0 auto; padding: 20px 0"></div>
+
+<div class="row">
+  <div class="col-xs-12 col-md-6 offset-md-3">
+    <div class="col-xl-8"></div>
+
+    <form #authFormRef="ngForm" (ngSubmit)="onAuthFormSubmit(authFormRef)">
+      <!-- EMAIL - input -->
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input
+          type="email"
+          class="form-control"
+          id="email"
+          name="email"
+          email
+          ngModel
+          required
+        />
+      </div>
+
+      <!-- PASSWORD - input -->
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="password"
+          name="password"
+          minlength="6"
+          ngModel
+          required
+        />
+      </div>
+
+      <div style="width: 10px; margin: 0 auto; padding: 10px 0"></div>
+
+      <!-- SUBMIT - button -->
+      <button
+        type="submit"
+        class="btn btn-primary mr-1"
+        [disabled]="!authFormRef.valid"
+      >
+        {{ isSignInMode ? "Sign In" : "Sign Up" }}
+      </button>
+
+      |
+
+      <!-- TOGGLE - button -->
+      <button
+        type="button"
+        class="btn btn-secondary ml-1"
+        (click)="onToggleAuthMode()"
+      >
+        Switch to {{ isSignInMode ? "Sign Up" : "Sign In" }}
+      </button>
+    </form>
+
+    <!-- . . . -->
+    <!-- ERROR -->
+    <p class="alert alert-danger mt-3" *ngIf="errMsg">{{ errMsg }}</p>
+
+    <div style="width: 10px; margin: 0 auto; padding: 100px 0"></div>
+  </div>
+</div>
