--- a/SideProjects/todolist/src/app/item-edit/item-edit.component.html
+++ b/SideProjects/todolist/src/app/item-edit/item-edit.component.html
@@ -9,6 +9,7 @@
       cols="20"
       rows="3"
       value="{{ pristineText }}"
+      [(ngModel)]="pristineText"
     ></textarea>
     <!-- <input type="text" name="info" id="info" value="{{ info.info }}" ngModel /> -->
 
